<resources>
    <string name="app_name">Arun</string>
    <string name="login">Login</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="farbinder_text">Farbinder text</string>
    <string name="connect_with_facebook">Connect with facebook</string>
    <string name="connect_with_twitter">Connect with twitter</string>
    <string name="signup_with_email">Signup with email</string>
    <string name="skip_login_for_now">Skip login for now</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="select_image">Select Image</string>
    <string name="upload_image">Upload Image</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">1807680196220467</string>
    <string name="media">Media</string>
    <string name="specials">SPECIALS</string>
    <string name="calendar">CALENDAR</string>
    <string name="search">SEARCH</string>
    <string name="community">COMMUNITY</string>
    <string name="profile">PROFILE</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="enter_what">Enter What Are You Looking For ?</string>
    <string name="enter_where">Where Are you Located ?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="select_picture">Select Picture</string>
    <string name="title_activity_map_search">Map</string>


</resources>
