<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1"
        android:orientation="vertical">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/business_avatar"
        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:layout_marginTop="73dp"
        android:padding="@dimen/bottom_navigation_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/specials"
            android:drawableTop="@drawable/specials"
            android:layout_weight="1"
            android:onClick="ShowSpecials"
            android:gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calendar"
            android:drawableTop="@drawable/calendar"
            android:layout_weight="1"
            android:onClick="ShowCalendar"
            android:gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:onClick="ShowSearch"
            android:drawableTop="@drawable/search"
            android:layout_weight="1"
            android:gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/community"
            android:drawableTop="@drawable/community"
            android:layout_weight="1"
            android:onClick="ShowCommunity"
            android:gravity="center_horizontal"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:drawableTop="@drawable/profile"
            android:layout_weight="1"
            android:onClick="ShowProfile"
            android:gravity="center_horizontal"/>

    </LinearLayout>


    </TableLayout>

</ScrollView>
