<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.arunmannuru.arun.SearchFeedActivity">


    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        tools:context="com.example.arunmannuru.arun.map_search" />


    <ListView
        android:id="@+id/lv_pf"
        android:layout_width="match_parent"
        android:layout_height="252dp"
        android:layout_marginTop="250dp">
    </ListView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:padding="@dimen/bottom_navigation_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/specials"
            android:drawableTop="@drawable/specials"
            android:layout_weight="1"
            android:gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calendar"
            android:drawableTop="@drawable/calendar"
            android:layout_weight="1"
            android:gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:onClick="ShowSearch"
            android:drawableTop="@drawable/search"
            android:layout_weight="1"
            android:gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/community"
            android:drawableTop="@drawable/community"
            android:layout_weight="1"
            android:gravity="center_horizontal"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:drawableTop="@drawable/profile"
            android:layout_weight="2"
            android:onClick="ShowProfile"
            android:gravity="center_horizontal"/>

    </LinearLayout>

</FrameLayout>
